--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -22,10 +22,10 @@ jobs:
       - name: Build the APK
         run: |
               cd SDL/android-project/
-              ./gradlew assembleDebug
+              ./gradlew assembleRelease
 
       - name: Upload the APK
         uses: actions/upload-artifact@v4
         with: 
-          name: app-debug.apk
-          path: SDL/android-project/app/build/outputs/apk/debug/app-debug.apk
+          name: app-release.apk
+          path: SDL/android-project/app/build/outputs/apk/release/app-release.apk
