--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -185,8 +185,6 @@ if (APPLE AND NOT BUILD_SHARED_LIBS)
     target_link_libraries(${EXECUTABLE_NAME} PUBLIC ${CF_LIB} ${CT_LIB} ${IO_LIB} ${CS_LIB} ${CG_LIB})
 endif()
 
-#----#
-
 # Dealing with assets
 # We have some non-code resources that our application needs in order to work. How we deal with those differs per platform.
 set(ASSETS_DIR ${JSON_ASSETS_PATH})
@@ -199,7 +197,7 @@ if (APPLE)
     foreach(asset ${ASSETS})
         file(RELATIVE_PATH relpath ${JSON_ASSETS_PATH} ${asset})
         target_sources(${EXECUTABLE_NAME} PRIVATE ${asset})
-        set_property(SOURCE ${asset} PROPERTY MACOSX_PACKAGE_LOCATION Resources/${relpath})
+        set_property(SOURCE ${asset} PROPERTY MACOSX_PACKAGE_LOCATION "Resources/${relpath}")
     endforeach()
 
 elseif(EMSCRIPTEN)
@@ -216,35 +214,32 @@ else()
         if (NOT MOBILE_ASSETS_DIR)
             message(FATAL_ERROR "Building for Android, but MOBILE_ASSETS_DIR is not set")
         endif()
-        file(MAKE_DIRECTORY ${MOBILE_ASSETS_DIR})
+        file(MAKE_DIRECTORY "${MOBILE_ASSETS_DIR}")
     endif()
 
     foreach(asset ${ASSETS})
         file(RELATIVE_PATH relpath ${JSON_ASSETS_PATH} ${asset})
 
         if (ANDROID)
-            set(outname ${MOBILE_ASSETS_DIR}/${relpath})
+            set(outname "${MOBILE_ASSETS_DIR}/${relpath}")
         else()
-            set(outname ${CMAKE_BINARY_DIR}/$<CONFIGURATION>/${relpath})
+            set(outname "${CMAKE_BINARY_DIR}/$<CONFIGURATION>/${relpath}")
         endif()
 
         # Ensure target directory exists
         add_custom_command(POST_BUILD
             TARGET ${EXECUTABLE_NAME}
-            COMMAND ${CMAKE_COMMAND} -E make_directory $<TARGET_FILE_DIR:${EXECUTABLE_NAME}>/${relpath}
+            COMMAND ${CMAKE_COMMAND} -E make_directory "$<TARGET_FILE_DIR:${EXECUTABLE_NAME}>/${relpath}"
         )
 
         # Copy asset file
         add_custom_command(POST_BUILD
             TARGET ${EXECUTABLE_NAME}
-            COMMAND ${CMAKE_COMMAND} -E copy_if_different ${asset} ${outname}
+            COMMAND ${CMAKE_COMMAND} -E copy_if_different ${asset} "${outname}"
             DEPENDS ${asset}
         )
     endforeach()
 endif()
-
-#----#
-
 
 # set some extra configs for each platform
 set(RESOURCE_FILES ${JSON_ICON_PATH})
@@ -264,12 +259,12 @@ set_target_properties(${EXECUTABLE_NAME} PROPERTIES
     # Identification for Xcode
     XCODE_ATTRIBUTE_BUNDLE_IDENTIFIER "com.ravbug.sdl3-sample"
 	XCODE_ATTRIBUTE_PRODUCT_BUNDLE_IDENTIFIER "com.ravbug.sdl3-sample"
-	XCODE_ATTRIBUTE_CURRENTYEAR ${CURRENTYEAR}
-    RESOURCE ${RESOURCE_FILES}
+	XCODE_ATTRIBUTE_CURRENTYEAR "${CURRENTYEAR}"
+    RESOURCE "${RESOURCE_FILES}"
 )
 
 # on Visual Studio, set our app as the default project
-set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${EXECUTABLE_NAME})
+set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT "${EXECUTABLE_NAME}")
 
 # On macOS Platforms, ensure that the bundle is valid for distribution by calling fixup_bundle.
 # note that fixup_bundle does not work on iOS, so you will want to use static libraries 
@@ -281,7 +276,7 @@ if(CMAKE_SYSTEM_NAME MATCHES "Darwin")
    	    RUNTIME DESTINATION ./install/bin COMPONENT Runtime
     )
 	
-    set(DEP_DIR ${CMAKE_BINARY_DIR})  # where to look for dependencies when fixing up
+    set(DEP_DIR "${CMAKE_BINARY_DIR}")  # where to look for dependencies when fixing up
     INSTALL(CODE 
         "include(BundleUtilities)
         fixup_bundle(\"$<TARGET_BUNDLE_DIR:${EXECUTABLE_NAME}>\" \"\" \"${DEP_DIR}\")
