--- a/.github/workflows/web-build.yml
+++ b/.github/workflows/web-build.yml
@@ -10,6 +10,16 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: recursive
+
+      - name: Set project env vars
+        run: |
+          PROJECT_NAME=$(python3 -c "import json; print(json.load(open('assets/info.json'))['project'])")
+          PROJECT_VERSION=$(python3 -c "import json; print(json.load(open('assets/info.json'))['version'])")
+          PROJECT_RESOURCES=$(python3 -c "import json; print(json.load(open('assets/info.json'))['resources'])")
+          echo "PROJECT_NAME=$PROJECT_NAME" >> $GITHUB_ENV
+          echo "PROJECT_VERSION=$PROJECT_VERSION" >> $GITHUB_ENV
+          echo "PROJECT_RESOURCES=$PROJECT_RESOURCES" >> $GITHUB_ENV
+            
       - name: Get Emscripten
         run: |
           git clone https://github.com/emscripten-core/emsdk.git --depth=1
@@ -24,9 +34,12 @@ jobs:
       - name: Prepare for upload
         run: |
            mkdir _site
-           mv build/*.html build/*.js build/*.css build/*.data build/*.wasm _site/ 2>/dev/null || true
-          #  mv build/sdl-min.html _site/index.html
-          #  mv build/sdl-* _site/
+           mv build/${{ env.PROJECT_NAME }}.js _site/
+           mv build/${{ env.PROJECT_NAME }}.data _site/
+           mv build/${{ env.PROJECT_NAME }}.wasm _site/
+           mv ${{ env.PROJECT_RESOURCES }}/index.html _site/
+           mv ${{ env.PROJECT_RESOURCES }}/style.css _site/
+           mv ${{ env.PROJECT_RESOURCES }}/script.js _site/
       - name: Fix permissions
         run: |
          chmod -c -R +rX "_site/" | while read line; do
