--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,20 +19,18 @@ jobs:
           - name: Set project env vars
             shell: bash
             run: |
-              PROJECT_NAME=$(python3 -c "import json; print(json.load(open('assets/info.json'))['project'])")
-              PROJECT_VERSION=$(python3 -c "import json; print(json.load(open('assets/info.json'))['version'])")
-              echo "PROJECT_NAME=$PROJECT_NAME" >> $GITHUB_ENV
-              echo "PROJECT_VERSION=$PROJECT_VERSION" >> $GITHUB_ENV
+              PROJECT=$(python3 -c "import json; print(json.load(open('assets/info.json'))['project'])")
+              echo "PROJECT=$PROJECT" >> $GITHUB_ENV
 
           - name: Configure
             run: cmake -DCMAKE_SYSTEM_NAME=${{ matrix.target }} -DCMAKE_SYSTEM_VERSION="10.0" -A${{ matrix.arch }} -S . -B build
           - name: Build
-            run: cmake --build build --target ${{ env.PROJECT_NAME }} --config Release
+            run: cmake --build build --target ${{ env.PROJECT }} --config Release
           - name: Upload Build
             uses: actions/upload-artifact@v4
             if: ${{ matrix.target != 'WindowsStore' }}
             with: 
-                name: ${{ env.PROJECT_NAME }}-${{ matrix.target }}-${{ matrix.arch }}
+                name: ${{ env.PROJECT }}-${{ matrix.target }}-${{ matrix.arch }}
                 path: |
                     build/Release/*.exe
                     build/Release/*.dll
@@ -50,10 +48,8 @@ jobs:
 
           - name: Set project env vars
             run: |
-              PROJECT_NAME=$(python3 -c "import json; print(json.load(open('assets/info.json'))['project'])")
-              PROJECT_VERSION=$(python3 -c "import json; print(json.load(open('assets/info.json'))['version'])")
-              echo "PROJECT_NAME=$PROJECT_NAME" >> $GITHUB_ENV
-              echo "PROJECT_VERSION=$PROJECT_VERSION" >> $GITHUB_ENV
+              PROJECT=$(python3 -c "import json; print(json.load(open('assets/info.json'))['project'])")
+              echo "PROJECT=$PROJECT" >> $GITHUB_ENV
 
           - name: Install Dependencies
             run: |
@@ -62,13 +58,13 @@ jobs:
           - name: Configure
             run: cmake -G Ninja -DCMAKE_BUILD_TYPE=Release -S . -B build
           - name: Build
-            run: cmake --build build --target ${{ env.PROJECT_NAME }} --config Release
+            run: cmake --build build --target ${{ env.PROJECT }} --config Release
           - name: Upload Build
             uses: actions/upload-artifact@v4
             with: 
-                name: ${{ env.PROJECT_NAME }}-Linux
+                name: ${{ env.PROJECT }}-Linux
                 path: |
-                    build/Release/${{ env.PROJECT_NAME }}
+                    build/Release/${{ env.PROJECT }}
                     build/Release/*.so
                     build/Release/*.ttf
                     build/Release/*.ogg
@@ -93,17 +89,15 @@ jobs:
 
           - name: Set project env vars
             run: |
-              PROJECT_NAME=$(python3 -c "import json; print(json.load(open('assets/info.json'))['project'])")
-              PROJECT_VERSION=$(python3 -c "import json; print(json.load(open('assets/info.json'))['version'])")
-              echo "PROJECT_NAME=$PROJECT_NAME" >> $GITHUB_ENV
-              echo "PROJECT_VERSION=$PROJECT_VERSION" >> $GITHUB_ENV
+              PROJECT=$(python3 -c "import json; print(json.load(open('assets/info.json'))['project'])")
+              echo "PROJECT=$PROJECT" >> $GITHUB_ENV
 
           - name: Configure
             run: cmake -G "Xcode" -DCMAKE_XCODE_ATTRIBUTE_CODE_SIGNING_ALLOWED=NO -DCMAKE_SYSTEM_NAME=${{ matrix.target }} -DCMAKE_OSX_ARCHITECTURES="arm64;x86_64" -S . -B build
           - name: Build
             run: cmake --build build --target install --config Release
           - name: Ad-Hoc Codesign
-            run: codesign -s - -f "./build/release/${{ env.PROJECT_NAME }}.app" --deep
+            run: codesign -s - -f "./build/release/${{ env.PROJECT }}.app" --deep
           - name: Create DMG
             run: | 
                 cd build
@@ -111,5 +105,5 @@ jobs:
           - name: Upload Build
             uses: actions/upload-artifact@v4
             with: 
-                name: ${{ env.PROJECT_NAME }}-apple-${{ matrix.target }}
+                name: ${{ env.PROJECT }}-apple-${{ matrix.target }}
                 path: build/*.dmg
