--- a/.github/workflows/web-build.yml
+++ b/.github/workflows/web-build.yml
@@ -11,15 +11,40 @@ jobs:
         with:
           submodules: recursive
 
+
       - name: Set project env vars
         run: |
-          PROJECT_NAME=$(python3 -c "import json; print(json.load(open('assets/info.json'))['project'])")
-          PROJECT_VERSION=$(python3 -c "import json; print(json.load(open('assets/info.json'))['version'])")
-          PROJECT_RESOURCES=$(python3 -c "import json; print(json.load(open('assets/info.json'))['resources-path'])")
-          echo "PROJECT_NAME=$PROJECT_NAME" >> $GITHUB_ENV
-          echo "PROJECT_VERSION=$PROJECT_VERSION" >> $GITHUB_ENV
-          echo "PROJECT_RESOURCES=$PROJECT_RESOURCES" >> $GITHUB_ENV
-            
+          PROJECT=$(python3 -c "import json; print(json.load(open('assets/info.json'))['project'])")
+          COMPANY=$(python3 -c "import json; print(json.load(open('assets/info.json'))['company'])")
+          VERSION=$(python3 -c "import json; print(json.load(open('assets/info.json'))['version'])")
+          DESCRIPTION=$(python3 -c "import json; print(json.load(open('assets/info.json'))['description'])")
+          AUTHOR=$(python3 -c "import json; print(json.load(open('assets/info.json'))['author'])")
+          LICENSE=$(python3 -c "import json; print(json.load(open('assets/info.json'))['license'])")
+          CREDITS=$(python3 -c "import json; print(json.load(open('assets/info.json'))['credits'])")
+          ORIENTATION=$(python3 -c "import json; print(json.load(open('assets/info.json'))['orientation'])")
+          WINDOW_MODE=$(python3 -c "import json; print(json.load(open('assets/info.json'))['window-mode'])")
+          ICON_PATH=$(python3 -c "import json; print(json.load(open('assets/info.json'))['icon-path'])")
+          ASSETS_PATH=$(python3 -c "import json; print(json.load(open('assets/info.json'))['assets-path'])")
+          RESOURCES_PATH=$(python3 -c "import json; print(json.load(open('assets/info.json'))['resources-path'])")
+          INCLUDE_PATH=$(python3 -c "import json; print(json.load(open('assets/info.json'))['include-path'])")
+          SOURCE_PATH=$(python3 -c "import json; print(json.load(open('assets/info.json'))['source-path'])")
+
+          echo "PROJECT=$PROJECT" >> $GITHUB_ENV
+          echo "COMPANY=$COMPANY" >> $GITHUB_ENV
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
+          echo "DESCRIPTION=$DESCRIPTION" >> $GITHUB_ENV
+          echo "AUTHOR=$AUTHOR" >> $GITHUB_ENV
+          echo "LICENSE=$LICENSE" >> $GITHUB_ENV
+          echo "CREDITS=$CREDITS" >> $GITHUB_ENV
+          echo "ORIENTATION=$ORIENTATION" >> $GITHUB_ENV
+          echo "WINDOW_MODE=$WINDOW_MODE" >> $GITHUB_ENV
+          echo "ICON_PATH=$ICON_PATH" >> $GITHUB_ENV
+          echo "ASSETS_PATH=$ASSETS_PATH" >> $GITHUB_ENV
+          echo "RESOURCES_PATH=$RESOURCES_PATH" >> $GITHUB_ENV
+          echo "INCLUDE_PATH=$INCLUDE_PATH" >> $GITHUB_ENV
+          echo "SOURCE_PATH=$SOURCE_PATH" >> $GITHUB_ENV
+
+
       - name: Get Emscripten
         run: |
           git clone https://github.com/emscripten-core/emsdk.git --depth=1
@@ -34,18 +59,45 @@ jobs:
       - name: Prepare for upload
         run: |
            mkdir _site
-           mv build/${{ env.PROJECT_NAME }}.js _site/
-           mv build/${{ env.PROJECT_NAME }}.data _site/
-           mv build/${{ env.PROJECT_NAME }}.wasm _site/
-           mv ${{ env.PROJECT_RESOURCES }}/index.html _site/
-           mv ${{ env.PROJECT_RESOURCES }}/style.css _site/
-           mv ${{ env.PROJECT_RESOURCES }}/script.js _site/
+           mv build/${{ env.PROJECT }}.js _site/
+           mv build/${{ env.PROJECT }}.data _site/
+           mv build/${{ env.PROJECT }}.wasm _site/
+           mv ${{ env.RESOURCES_PATH }}/index.html _site/
+           mv ${{ env.RESOURCES_PATH }}/style.css _site/
+           mv ${{ env.RESOURCES_PATH }}/script.js _site/
+           mv ${{ env.RESOURCES_PATH }}/manifest.json _site/
       - name: Fix permissions
         run: |
          chmod -c -R +rX "_site/" | while read line; do
            echo "::warning title=Invalid file permissions automatically fixed::$line"
          done
-      - name: Upload 
+
+
+      - name: Replace placeholders with env vars
+        run: |
+          # Export all workflow env vars to shell
+          export PROJECT="${{ env.PROJECT }}"
+          export COMPANY="${{ env.COMPANY }}"
+          export VERSION="${{ env.VERSION }}"
+          export DESCRIPTION="${{ env.DESCRIPTION }}"
+          export AUTHOR="${{ env.AUTHOR }}"
+          export LICENSE="${{ env.LICENSE }}"
+          export CREDITS="${{ env.CREDITS }}"
+          export ORIENTATION="${{ env.ORIENTATION }}"
+          export WINDOW_MODE="${{ env.WINDOW_MODE }}"
+          export ICON_PATH="${{ env.ICON_PATH }}"
+          export ASSETS_PATH="${{ env.ASSETS_PATH }}"
+          export RESOURCES_PATH="${{ env.RESOURCES_PATH }}"
+          export INCLUDE_PATH="${{ env.INCLUDE_PATH }}"
+          export SOURCE_PATH="${{ env.SOURCE_PATH }}"
+
+          # Replace placeholders in all relevant files
+          for file in _site/index.html _site/script.js _site/style.css _site/manifest.json; do
+            envsubst < "$file" > "$file.tmp" && mv "$file.tmp" "$file"
+          done
+
+      
+      - name: Upload
         uses: actions/upload-pages-artifact@v3
         with:
           path: _site/
