--- a/resources/manifest.json
+++ b/resources/manifest.json
@@ -1,51 +1,17 @@
 {
-  "name": "Flappy Bird",
-  "short_name": "Flappy Bird",
-  "start_url": "/Flappy_Bird/",
-  "scope": "/Flappy_Bird/",
-  "display": "fullscreen",
+  "name": "${PROJECT}",
+  "start_url": "/${PROJECT}/",
+  "scope": "/${PROJECT}/",
+  "display": "${WINDOW_MODE}",
   "theme_color": "#000",
   "background_color": "#000",
-  "description": "Flappy Bird Clone is a recreation of the classic Flappy Bird game. It aims to provide an enjoyable and nostalgic gaming experience for players. The game features simple controls and addictive gameplay.",
-  "orientation": "landscape",
+  "orientation": "${ORIENTATION}",
   "icons": [
     {
-      "src": "assets/sprites/pwa/manifest-icon-192.maskable.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "assets/sprites/pwa/manifest-icon-192.maskable.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "maskable"
-    },
-    {
-      "src": "assets/sprites/pwa/manifest-icon-512.maskable.png",
+      "src": "${ICON_PATH}",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "assets/sprites/pwa/manifest-icon-512.maskable.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "maskable"
-    }
-  ],
-  "screenshots": [
-    {
-      "src": "assets/videos/gamePlayPC.gif",
-      "sizes": "600x338",
-      "type": "image/gif",
-      "form_factor": "wide"
-    },
-    {
-      "src": "assets/videos/gamePlayMobile.gif",
-      "sizes": "418x746",
-      "type": "image/gif",
-      "form_factor": "narrow"
+      "purpose": "any maskable"
     }
   ]
 }
