--- a/.github/workflows/web-build.yml
+++ b/.github/workflows/web-build.yml
@@ -96,6 +96,12 @@ jobs:
             envsubst < "$file" > "$file.tmp" && mv "$file.tmp" "$file"
           done
 
+      - name: Prepare icon folder
+        run: |
+          # Create the folder path for the icon
+          mkdir -p "_site/${{ env.ICON_PATH }}"
+          # Copy the icon file into that folder
+          cp "${{ env.ICON_PATH }}" "_site/${{ env.ICON_PATH }}/"
       
       - name: Upload
         uses: actions/upload-pages-artifact@v3
