--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -15,9 +15,21 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
 
+      - name: Set project env vars
+        run: |
+          ICON_PATH=$(python3 -c "import json; print(json.load(open('assets/info.json'))['icon-path'])")
+          echo "ICON_PATH=$ICON_PATH" >> $GITHUB_ENV
+
       - name: Update the build.gradle
         run:  |
                cp build.gradle SDL/android-project/app/
+
+      # - name: Inject custom app icon
+      #   run: |
+      #     for d in mdpi hdpi xhdpi xxhdpi xxxhdpi; do
+      #       mkdir -p SDL/android-project/app/src/main/res/mipmap-$d
+      #       cp ${{ env.ICON_PATH }} SDL/android-project/app/src/main/res/mipmap-$d/ic_launcher.png
+      #     done
 
       - name: Build the APK
         run: |
