--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -1,4 +1,4 @@
-name: Build for Android
+name: Build Sample for Android
 on: [workflow_dispatch]
 
 jobs:
@@ -15,29 +15,17 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
 
-      - name: Set project env vars
-        run: |
-          ICON_PATH=$(python3 -c "import json; print(json.load(open('assets/info.json'))['icon-path'])")
-          echo "ICON_PATH=$ICON_PATH" >> $GITHUB_ENV
-
       - name: Update the build.gradle
         run:  |
                cp build.gradle SDL/android-project/app/
 
-      # - name: Inject custom app icon
-      #   run: |
-      #     for d in mdpi hdpi xhdpi xxhdpi xxxhdpi; do
-      #       mkdir -p SDL/android-project/app/src/main/res/mipmap-$d
-      #       cp ${{ env.ICON_PATH }} SDL/android-project/app/src/main/res/mipmap-$d/ic_launcher.png
-      #     done
-
       - name: Build the APK
         run: |
               cd SDL/android-project/
-              ./gradlew assembleRelease
+              ./gradlew assembleDebug
 
       - name: Upload the APK
         uses: actions/upload-artifact@v4
         with: 
-          name: app-release.apk
-          path: SDL/android-project/app/build/outputs/apk/release/app-release.apk
+          name: app-debug.apk
+          path: SDL/android-project/app/build/outputs/apk/debug/app-debug.apk
